<resources>
    <string name="app_name">Screening Suhu</string>
    <string name="action_sign_in_short">Daftar</string>
    <string name="username">Username</string>
    <string name="eror_username">Masukan Username Anda!</string>
    <string name="status">Mahasiswa / Dosen / Tamu</string>
    <string name="minimum_password">Password Minimal 6 Karakter!</string>
    <string name="auth_failed">Login Gagal, Periksa Kembali Email dan Passowrd</string>
    <string name="status_failed">Masukan Status Kunjungan Anda!</string>
    <string name="change_email">Ganti Email</string>
    <string name="change_password">Ganti Password</string>>
    <string name="title_activity_login">Masuk</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Nama Lengkap</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Belum Punya Akun? <u>Daftar Sekarang</u></string>
    <string name="btn_link_to_login">Sudah Punya Akun? <u>Masuk Sekarang</u></string>
    <string name="btn_forgot_password">Lupa Password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="hint_new_email">Email Baru</string>
    <string name="btn_change">Ganti</string>
    <string name="btn_send">Kirim</string>
    <string name="btn_remove">Hapus</string>
    <string name="btn_sign_out">Keluar</string>
    <string name="lbl_forgot_password">Lupa Password?</string>
    <string name="FullName">Nama Lengkap</string>
    <string name="Tlp">Nomer Ponsel</string>
    <string name="eror_name">Masukan Nama Lengkap Anda</string>
    <string name="eror_phone">Masukan Nomer Ponsel Anda</string>
    <string name="eror_phone2">Nomer Ponsel Kurang Dari 10 Digit!</string>
    <string name="berhasil_daftar">Berhasil Mendaftarkan Akun!</string>
    <string name="eror_email">Masukan Alamat Email Anda</string>
    <string name="eror_email2">Format Alamat Email Tidak Sesuai!</string>
    <string name="login_admin">Masuk Sebagai Admin</string>
    <string name="admin">Login Admin</string>
    <string name="login_user">Masuk Sebagai User</string>
    <string name="alamat">Alamat Anda</string>
    <string name="alamat_eror">Masukan Alamat Anda!</string>
</resources>