<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/gradient_background2"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/activity_vertical_margin">

            <ImageView
                android:layout_width="@dimen/logo_w_h"
                android:layout_height="@dimen/logo_w_h"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:src="@drawable/icon_register"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Daftarkan Akun Anda"
                android:layout_marginBottom="5dp"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_reguler"
                android:textSize="16dp"
                android:textAlignment="center"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Untuk Melakukan Screening Suhu"
                android:layout_marginBottom="15dp"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_reguler"
                android:textSize="16dp"
                android:textAlignment="center"
                android:gravity="center_horizontal" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/FullName"
                    android:layout_marginBottom="10dp"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:background="@color/white"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Tlp"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:background="@color/white"/>

            </com.google.android.material.textfield.TextInputLayout>

             <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/alamat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/alamat"
                        android:layout_marginBottom="10dp"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:background="@color/white"/>

             </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/Rgrup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="15dp">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/dosen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Dosen"
                    android:textColor="@color/white"
                    android:onClick="checkButton"
                    android:checked="true"/>

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/mahasiswa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Mahasiswa"
                    android:textColor="@color/white"
                    android:onClick="checkButton" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/tamu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Tamu"
                    android:textColor="@color/white"
                    android:onClick="checkButton" />
            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:layout_marginBottom="10dp"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:background="@color/white"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="true"
                    android:hint="@string/hint_password"
                    android:layout_marginBottom="10dp"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:background="@color/white"/>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sign_up_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/bg_register"
                android:text="@string/action_sign_in_short"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_marginTop="35dp"
                android:id="@+id/sign_in_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/btn_link_to_login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15dp" />

        </LinearLayout>

    </ScrollView>


</LinearLayout>